# multi-agent-chat

./: .dockerignore  .env.docker.example  .env.example  .gitignore  API_KEY_HANDLING_FIX.md  AUTH_SETUP_NEXT_STEPS.md  BACKEND.md  BACKEND_TEST_RESULTS.md  DEBATE_QUALITY_IMPLEMENTATION.md  DOCKER.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  INSTALLATION_GUIDE.md  INSTALL_COMMANDS.md  LOGGING_GUIDE.md  MODEL_GUIDE.md  Makefile  PANELIST_VALIDATION_FIX.md  QUICK_ENGINE_CHECK.md  README.md  REFACTOR_SUMMARY.md  SPEC.md  TEST_AUTHENTICATION.md  config.py  docker-compose.external-db.yml  docker-compose.yml  main.py  panel_graph.py  pyproject.toml  run_migration.py  start.sh  test_auth_backend.py  test_search_integration.py  test_streaming.py  verify_migration.py
backend/: .env.example  config.py  main.py  panel_graph.py  provider_clients.py  pyproject.toml  test_ag2_providers.py  test_context_management.py  usage_tracker.py
backend/auth/: dependencies.py  encryption.py  google_oauth.py  jwt_manager.py  models.py  provider_keys.py
backend/debate/: __init__.py  agents.py  evaluators.py  orchestrator.py  persistence.py  scoring.py  service.py  state.py  usage.py
backend/decision/: __init__.py  graph.py  rate_limiter.py  schemas.py  state.py
backend/decision/nodes/: conflict_detector.py  expert.py  human_gate.py  planner.py  synthesizer.py
backend/decision/tools/: calculator.py  search.py
backend/migrations/: 001_add_auth_tables.sql  004_add_discussion_mode_id.sql  README.md
backend/routers/: admin.py  auth.py  conversations.py
backend/tests/: conftest.py  test_ag2_debate.py  test_decision_conflict.py  test_decision_endpoint.py  test_decision_expert.py  test_decision_graph.py  test_decision_human_gate.py  test_decision_integration.py  test_decision_planner.py  test_decision_schemas.py  test_decision_synthesizer.py  test_decision_tools.py  test_feature_flag.py  test_panel_graph_debate.py  test_provider_support.py
docs/plans/: 2026-01-26-decision-assistant-design.md  2026-01-27-decision-assistant-implementation.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.js  App.tsx  api.d.ts  api.js  api.ts  main.js  main.tsx  styles.css  types.d.ts  types.ts
frontend/src/components/: AdminPanel.tsx  ConflictPanel.tsx  DebateScoreboard.d.ts  DebateScoreboard.js  DebateScoreboard.tsx  DebateViewer.d.ts  DebateViewer.js  DebateViewer.tsx  DecisionViewer.tsx  ExpertCard.tsx  Markdown.d.ts  Markdown.js  Markdown.tsx  PanelConfigurator.d.ts  PanelConfigurator.js  PanelConfigurator.tsx  RecommendationPanel.tsx  RegenerateModal.d.ts  RegenerateModal.js  RegenerateModal.tsx  StanceIndicator.d.ts  StanceIndicator.js  StanceIndicator.tsx  theme-provider.d.ts  theme-provider.js  theme-toggle.d.ts  (+2 more)
tarot-app/: app.js  cards.js  index.html  style.css
tests/: test_panel_graph.py
(+31 files in other folders)
