[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-panel"
version = "0.5.0"
description = "LangGraph-based AI multi-agent discussion panel"
authors = [{name = "Codex"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain-openai>=0.1.7",
    "langchain-google-genai>=1.0.4",
    "langchain-anthropic>=0.1.15",
    "langchain-community>=0.3.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.2.39",
    "langgraph-checkpoint-postgres>=0.1.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["config", "panel_graph", "main"]
