[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-panel"
version = "0.6.0"
description = "AI multi-agent discussion panel powered by AG2 (AutoGen) and LangGraph"
authors = [{name = "Codex"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain-openai>=0.1.7",
    "langchain-google-genai>=1.0.4",
    "langchain-anthropic>=0.1.15",
    "langchain-community>=0.3.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.2.39",
    "langgraph-checkpoint-postgres>=0.1.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tavily-python>=0.3.0",
    "ag2>=0.3.0",
    "asyncpg>=0.29.0",
    # Provider SDKs needed for AG2 multi-provider support
    "google-generativeai>=0.3.0",
    "anthropic>=0.18.0",
    # AG2 Gemini extra dependencies
    "google-cloud-aiplatform>=1.38.0",
    "pillow>=10.0.0",
    "jsonschema>=4.0.0",
    # Authentication dependencies
    "google-auth>=2.25.2",  # Google OAuth token verification
    "PyJWT>=2.8.0",          # JWT token generation
    "cryptography>=41.0.7",  # AES encryption for API keys
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["config", "panel_graph", "main"]
